--- a/assets/index.html
+++ b/assets/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4조 프로젝트 - 쿼티의민족</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- 본문바로가기 -->
+    <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
+
+    <!-- header -->
+    <header id="header">
+        <div class="inner">
+            <h1><a href="#">Qwerty's Delivery</a></h1>
+        </div>
+    </header>
+
+    <section></section>
 </body>
 </html>
