--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
     <title>4조 프로젝트 - 쿼티의민족</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -11,13 +11,41 @@
     <!-- 본문바로가기 -->
     <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
 
-    <!-- header -->
-    <header id="header">
-        <div class="inner">
-            <h1><a href="#">Qwerty's Delivery</a></h1>
-        </div>
-    </header>
+    <div class="wrap">
+        <!-- header -->
+        <header id="header">
+            <div class="inner">
+                <h1><a href="#">Qwerty's Delivery</a></h1>
+            </div>
+        </header>
 
-    <section></section>
+        <!-- mainVisual -->
+        <section id="mainVisual"></section>
+
+        <!-- main -->
+        <main id="container" class="main">
+            <section class="content">
+                <div class="mainBtnWrap">
+                    <div class="inner">
+                        <button class="firstBtn">
+                            <img src="./images/1-serving.png" alt="1인분" />
+                            1인분
+                        </button>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <!-- footer -->
+        <footer id="footer">
+            <div class="inner">
+                <p>made by team.qwerty</p>
+            </div>
+        </footer>
+    </div>
+
+
+    <!-- script part -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
