--- a/assets/index.html
+++ b/assets/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
     <title>4조 프로젝트 - 쿼티의민족</title>
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <!-- 본문바로가기 -->
     <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
 
-    <div class="wrap">
+    <div id="wrap">
         <!-- header -->
         <header id="header">
             <div class="inner">
-                <h1><a href="#">Qwerty's Delivery</a></h1>
+                <h1><a href="./index.html">Qwerty's Delivery</a></h1>
+
+                <div class="searchWrap">
+                    <input type="text" placeholder="음식점을 입력해주세요"/>
+                    <button class="search">검색</button>
+                </div>
             </div>
         </header>
 
@@ -24,13 +29,13 @@
 
         <!-- main -->
         <main id="container" class="main">
-            <section class="content">
+            <section id="content">
                 <div class="mainBtnWrap">
-                    <div class="inner">
-                        <button class="firstBtn">
-                            <img src="./images/1-serving.png" alt="1인분" />
-                            1인분
-                        </button>
+                    <div class="imageBox i1" onclick="location.href='./index.html'">
+                        <img class="imageThumbnail" src="./images/customer.png" alt="1인분" />
+                    </div>
+                    <div class="imageBox i2" onclick="location.href='./ceo.html'">
+                        <img class="imageThumbnail" src="./images/ceo.png" alt="사장님" />
                     </div>
                 </div>
             </section>
