--- a/assets/ceoLogin.html
+++ b/assets/ceoLogin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/ceo.css">
 </head>
 <body>
-    <form class="login" action="/storeRoute" method="post">
+    <form class="login">
         <h2>사장님 로그인</h2>
         <div class="login login_id">
             <h4>Your Email</h4>
@@ -19,8 +19,12 @@
             <input type="password" name="pw" id="pw" placeholder="Password">
         </div>
         <div class="submit">
-            <input type="submit" value="submit">
+            <button class="loginBtn" id="login" onclick="loginPart();">로그인</button>
         </div>
     </form>
+
+
+    <!-- script part -->
+    <script src="./js/ceoUser.js"></script>
 </body>
 </html>
