--- a/assets/index.html
+++ b/assets/index.html
@@ -31,11 +31,11 @@
         <main id="container" class="main">
             <section id="content">
                 <div class="mainBtnWrap">
-                    <div class="imageBox i1" onclick="location.href='../pages_ceo/index.html'">
-                        <img class="imageThumbnail" src="../images/customer.png" alt="1인분" />
+                    <div class="imageBox i1" onclick="location.href='./pages_customer/storeSearch.html'">
+                        <img class="imageThumbnail" src="./images/customer.png" alt="1인분" />
                     </div>
-                    <div class="imageBox i2" onclick="location.href='./ceo.html'">
-                        <img class="imageThumbnail" src="../images/ceo.png" alt="사장님" />
+                    <div class="imageBox i2" onclick="location.href='./pages_ceo/ceo.html'">
+                        <img class="imageThumbnail" src="./images/ceo.png" alt="사장님" />
                     </div>
                 </div>
             </section>
