--- a/assets/pages_customer/review.html
+++ b/assets/pages_customer/review.html
@@ -123,6 +123,8 @@
     <button style="float: right" class="btn btn-primary" onclick="back()">뒤로 가기 </button>
   </div>
   </div>
+
+  <!-- script part -->
   <script src='../js/review.js'></script>
 </body>
 
