--- a/assets/index.html
+++ b/assets/index.html
@@ -15,17 +15,22 @@
         <!-- header -->
         <header id="header">
             <div class="inner">
-                <h1><a href="../pages_ceo/index.html">Qwerty's Delivery</a></h1>
-
-                <div class="searchWrap">
-                    <input type="text" placeholder="음식점을 입력해주세요"/>
-                    <button class="search">검색</button>
-                </div>
+                <h1><a href="/index.html">Qwerty's Delivery</a></h1>
             </div>
         </header>
 
         <!-- mainVisual -->
-        <section id="mainVisual"></section>
+        <section id="mainVisual">
+            <div class="visual">
+                <div class="txtWrap">
+                    <p>코로나19로<br> 지친 모두를 응원합니다.</p>
+                    <h3>포장주문<br>매일 할인</h3>
+                </div>
+                <div class="imgWrap">
+                    <img src="./images/bazzi.gif" alt="bazzi"/>
+                </div>
+            </div>
+        </section>
 
         <!-- main -->
         <main id="container" class="main">
