--- a/assets/pages_ceo/ceo.html
+++ b/assets/pages_ceo/ceo.html
@@ -15,7 +15,7 @@
         <!-- header -->
         <header id="header">
             <div class="inner">
-                <h1><a href="./index.html">Qwerty's Delivery - CEO</a></h1>
+                <h1><a href="../index.html">Qwerty's Delivery - CEO</a></h1>
                 <nav class="nav">
                     <ul class="gnb">
                         <li><a href="./ceoLogin.html">로그인</a></li>
@@ -114,5 +114,8 @@
 
     </div>
 
+    <!-- script part -->
+    <script src="../js/ceoOrder.js"></script>
+    <script src="../js/ceoUser.js"></script>
 </body>
 </html>
