--- a/assets/pages_customer/store.html
+++ b/assets/pages_customer/store.html
@@ -7,14 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  
+  <title>Qwerty's Delivery | 상품 목록</title>
+  <!-- Font Awesome CSS -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/customer.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-
-  <!-- Font Awesome CSS -->
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="../css/customer.css" rel="stylesheet" />
-  <title>스파르타 쇼핑몰 | 상품 목록</title>
   <style>
     .card {
       cursor: pointer;
@@ -30,7 +31,7 @@
   <nav class="navbar navbar-expand-sm navbar-dark bg-sparta justify-content-end">
     <a class="navbar-brand" href="/goods.html">
       <img src="/logo_big_tr.png" width="30" height="30" class="d-inline-block align-top" alt="" />
-      스파르타 쇼핑몰
+      Qwerty's Delivery
     </a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
@@ -110,7 +111,7 @@
     </div>
   </div>
 
-  <!-- Optional JavaScript -->
+  <!-- script part -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
