--- a/assets/pages_customer/order.html
+++ b/assets/pages_customer/order.html
@@ -44,7 +44,7 @@
           class="d-inline-block align-top"
           alt=""
         />
-        스파르타 쇼핑몰
+        쿼티의 민족
       </a>
       <button
         class="navbar-toggler ml-auto"
