--- a/assets/pages_customer/login.html
+++ b/assets/pages_customer/login.html
@@ -58,6 +58,19 @@
               <input type="password" class="form-control" id="inputPassword" placeholder="고객님 비밀번호를 입력해주세요" />
             </div>
           </div>
+          <div class="row d-flex justify-content-around mt-3">
+            <div class="col-6 pr-2">
+              <button type="button" class="btn btn-sparta btn-block" onclick="LogIn()">
+                로그인
+              </button>
+            </div>
+            <div class="col-6 pl-2">
+              <button type="button" class="btn btn-outline-sparta btn-block" onclick="back()">
+                취소
+              </button>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -73,23 +86,60 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
-  <script>
+
+    <script>
+
+// let LogIn = async function (){
+//         const email = document.getElementById('inputEmail');
+//         const password = document.getElementById('inputPassword');
+//     try{
+//       let res = await axios({
+//         method: 'POST',
+//         url: 'http://localhost:3000/api/login',
+//         data: {
+//           email: email.value,
+//           password: password.value,
+//         },
+//       });
+//       console.log(res);
+//       document.write(JSON.stringify(res));
+//     }catch(error){
+//       console.log(error);
+//       throw new Error(error);
+//     }}
+
+
+    function LogIn() {
+        try{
+        const data = {
+          email: $('#inputEmail').val(),
+          password: $('#inputPassword').val(),
+        }
+        console.log(data)
+        axios.post('http://localhost:3000/api/login', data)
+          .then(data => console.log(data.data))
+      }catch(error){
+        console.log(error)
+      }
+      }
+
+      function back() {
+    location.href = 'javascript:history.back();'
+  }
+
+  </script>
+
+</body>
+</html>
+
+
+  <!-- <script>
     function LogIn() {
       const email = $('#inputEmail').val();
       const password = $('#inputPassword').val();
 
       try {
-        // const response = axios({
-        //   method: 'POST',
-        //   url: 'http://localhost:3000/api/user/signup',
-        //   data: {
-        //     email: email,
-        //     verifyNumber: verifyNumberInput,
-        //     password: password,
-        //     confirmPassword: passwordConfirm,
-        //   },
-        // });
-        // console.log(response);
+
         fetch("http://localhost:3000/api/login", {
           method: "POST",
           headers: {
@@ -105,8 +155,7 @@
       } catch (error) {
         console.log(error)
       }
-    }
-  </script>
-</body>
+    } -->
+    
 
-</html>
+
