--- a/assets/pages_customer/register.html
+++ b/assets/pages_customer/register.html
@@ -4,6 +4,8 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
+  <!-- axios -->
+  <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -27,7 +29,6 @@
       }
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -48,7 +49,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" id="inputEmail" placeholder="hello@email.com" />
                 <div class="input-group-append">
-                  <button class="btn btn-outline-sparta" onclick="emailSenderHandler()">
+                  <button class="btn btn-outline-sparta" onclick="emailSender()">
                     중복확인
                   </button>
                 </div>
@@ -109,47 +110,30 @@
     crossorigin="anonymous"></script>
   <script>
     function signUp() {
-      const email = $('#inputEmail').val();
-      const verifyNumberInput = $('#inputVerifyNumber').val();
-      const password = $('#inputPassword').val();
-      const passwordConfirm = $('#inputPasswordConfirm').val();
-
       try {
-        // const response = axios({
-        //   method: 'POST',
-        //   url: 'http://localhost:3000/api/user/signup',
-        //   data: {
-        //     email: email,
-        //     verifyNumber: verifyNumberInput,
-        //     password: password,
-        //     confirmPassword: passwordConfirm,
-        //   },
-        // });
-        // console.log(response);
-        fetch("http://localhost:3000/api/user/signup", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            email: email,
-            verifyNumber: verifyNumberInput,
-            password: password,
-            confirmPassword: passwordConfirm,
-          }),
-        })
-          .then((response) => response.json())
-          .then((data) => console.log(data))
+        const data = {
+          email: $('#inputEmail').val(),
+          verifyNumberInput: $('#inputVerifyNumber').val(),
+          password: $('#inputPassword').val(),
+          passwordConfirm: $('#inputPasswordConfirm').val()
+        }
+        console.log(data)
+        axios.post('http://localhost:3000/api/user/signup', data)
+          .then(data => console.log(data.data))
       } catch (error) {
         console.log(error)
       }
     }
 
-    function customAlert(text, confirmCallback) {
-      $('#alertText').text(text);
-      $('#alertModal').modal('show');
-      if (confirmCallback) {
-        $('#alertModal .btn-confirm').click(confirmCallback);
+    function emailSender() {
+      try {
+        const data = {
+          email: $('#inputEmail').val()
+        }
+        axios.post('http://localhost:3000/api/user/signup/email', data)
+          .then(data => console.log(data.data))
+      } catch (error) {
+        console.log(error);
       }
     }
   </script>
