--- a/assets/pages_ceo/ceoLogin.html
+++ b/assets/pages_ceo/ceoLogin.html
@@ -6,23 +6,53 @@
     <title>사장님 로그인</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/ceo.css">
+
+    <!-- axios -->
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <div id="wrap">
-        <form class="login" action="/storeRoute" method="post">
+        <form class="login">
             <h2>사장님 로그인</h2>
             <div class="login login_id">
                 <h4>Your Email</h4>
-                <input type="text" name="id" id="id" placeholder="email">
+                <input type="text" name="id" id="email" placeholder="email">
             </div>
             <div class="login login_pw">
                 <h4>Password</h4>
-                <input type="password" name="pw" id="pw" placeholder="Password">
+                <input type="password" name="pw" id="password" placeholder="Password">
             </div>
             <div class="submit">
-                <input type="submit" value="submit">
+                <input type="submit" value="submit" onclick="login();">
             </div>
         </form>
     </div>
+
+
+    <!-- script part -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script>
+        function login() {
+            try {
+                const data = {
+                    email: $('#email').val(),
+                    password: $('#password').val(),
+                }
+                console.log(data)
+                axios.post('http://localhost:3000/api/ceo/login', data)
+                    .then(response => {
+                        // 로그인 성공 시
+                        if (response.data.success) {
+                            alert('사장님 어서오세요');
+                        } else {
+                            // 로그인 실패 시
+                            alert('회원이 아닙니다. 회원가입을 해주세요.');
+                        }
+                    }) 
+                } catch (error) {
+                    console.log(error)
+                };
+        };
+    </script>
 </body>
 </html>
