--- a/assets/pages_ceo/ceoSignup.html
+++ b/assets/pages_ceo/ceoSignup.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <!-- axios -->
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사장님 회원가입</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/ceo.css">
 </head>
+
 <body>
     <div id="wrap">
-        <form class="login" action="/storeRoute" method="post">
+        <form class="login">
             <h2>사장님 회원가입</h2>
             <div class="login login_id">
                 <h4>account_circle</h4>
@@ -17,11 +21,11 @@
             </div>
             <div class="login login_pw">
                 <h4>Password</h4>
-                <input type="password" name="pw" id="pw" placeholder="Password">
+                <input type="password" name="pw" id="password" placeholder="Password">
             </div>
             <div class="login login_confirm">
                 <h4>Password Confirm</h4>
-                <input type="password" name="password" id="password" placeholder="Password">
+                <input type="password" name="password" id="passwordConfirm" placeholder="Password">
             </div>
             <div class="login login_storeName">
                 <h4>storeName</h4>
@@ -29,12 +33,37 @@
             </div>
             <div class="login login_storeImage">
                 <h4>storeImage</h4>
-                <input type="image" name="storeImage" id="storeImage" placeholder="가게사진">
+                <input type="file" name="storeImage" id="storeImage" placeholder="가게사진">
             </div>
             <div class="submit">
-                <input type="submit" value="submit">
+                <input type="submit" value="submit" onclick="signUp();">
             </div>
         </form>
     </div>
+    <!-- script part -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script type="module" src="../js/ceoUser.js"></script>
+    <script>
+        function signUp() {
+            try {
+                const data = {
+                    email: $('#email').val(),
+                    password: $('#password').val(),
+                    confirm: $('#passwordConfirm').val(),
+                    storeName: $('#storeName').val(),
+                    storeImage: $('#storeImage').val()
+                }
+                console.log(data)
+                axios.post('http://localhost:3000/api/ceo/signup', data)
+                    .then(data => console.log(data.data))
+            } catch (error) {
+                console.log(error)
+            }
+        }
+    </script>
 </body>
+
 </html>
