--- a/assets/pages_ceo/ceoLogin.html
+++ b/assets/pages_ceo/ceoLogin.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="wrap">
-        <form class="login" action="/storeRoute" method="post">
-            <h2>사장님 로그인</h2>
+        <form class="login">   <!-- action="/storeRoute" method="post" -->
+            <h2>사장님 로그인</h2>  
             <div class="login login_id">
                 <h4>Your Email</h4>
                 <input type="text" name="id" id="id" placeholder="email">
