--- a/assets/pages_customer/storeSearch.html
+++ b/assets/pages_customer/storeSearch.html
@@ -3,17 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
+  <!-- axios -->
+  <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- css -->
+  <title>Qwerty's Delivery</title>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/customer.css">
-
-  <title>내배캠 최고 평점 영화</title>
-
-  <!-- javascript -->
-  <script src="../js/tmdb.js" type="module"></script>
 </head>
 
 <body>
@@ -21,20 +18,28 @@
     <!-- header -->
     <header id="header">
       <div class="inner">
-          <h1><a href="../pages_ceo/index.html">Qwerty's Delivery - 고객용</a></h1>
+        <h1><a href="../index.html">Qwerty's Delivery - 고객용</a></h1>
 
-          <div class="searchWrap">
-              <input type="text" placeholder="음식점을 입력해주세요"/>
-              <button class="search">검색</button>
-          </div>
+        <nav class="nav">
+          <ul class="gnb">
+            <li><a href="./user/login">로그인</a></li>
+            <li><a href="./user/register">회원가입</a></li>
+            <li><a href="#">회원정보</a></li>
+          </ul>
+        </nav>
+
+        <div class="searchWrap">
+          <input type="text" placeholder="음식점을 입력해주세요" />
+          <button class="search">검색</button>
+        </div>
       </div>
-  </header>
+    </header>
 
     <section id="subVisual"></section>
 
     <main id="container" class="main">
       <section id="content">
-          
+        <ul id="card-list"></ul>
       </section>
     </main>
 
@@ -44,6 +49,70 @@
       </div>
     </footer>
   </div>
+  <script>
+    
+    const getStores = async (searchWord) => {
+      axios.get('http://localhost:3000/api/user/stores')
+        .then(function (response) {
+          console.log(response.data);
+        })
+        .catch(function (error) {
+          console.log(error);
+        })
+    }
+
+    function renderStoreCard(storeList) {
+      const StoreCardList = document.querySelector("#card-list");
+
+      StoreCardList.innerHTML = storeList.map(() => {
+        return '안녕하세요'
+      }).join('')
+    }
+
+    document.addEventListener("DOMContentLoaded", async () => {
+      const storeCards = await getStores()
+      renderStoreCard(storeCards)
+    })
+
+      // const getTopRatedMovies = async (searchWord) => {
+      //   const url = `http://localhost:3000/api/movies?${searchWord ? `searchWord=${searchWord}` : ''}`
+      //   // fetch 함수를 사용하여, 해당 주소(url)로 GET 요청을 보냅니다. 이를 통해 Server에서 영화 목록을 받아옵니다.
+      //   const response = await fetch(url);
+
+      //   if (response.status !== 200) {
+      //     throw new Error('API call error!')
+      //   }
+      //   // 'response'의 본문을 JSON 형식으로 Parsing하여 반환합니다.
+      //   return await response.json()
+      // };
+
+      // function renderMovieCard(movieList) {
+      //   const cardList = document.querySelector("#card-list");
+
+      //   cardList.innerHTML = movieList.map((movie) => {
+      //     return `<li class="movie-card" id=${movie.id}>
+      //         <img src="https://image.tmdb.org/t/p/w500${movie.poster_path}" alt="${movie.title}">
+      //         <h3 class="movie-title">${movie.title}</h3>
+      //         <p>${movie.overview}</p>
+      //         <p>Rating: ${movie.vote_average}</p>
+      //       </li>`
+      //   }).join('')
+      // }
+
+      // document.addEventListener("DOMContentLoaded", async () => {
+      //   const topRatedMovies = await getTopRatedMovies()
+      //   renderMovieCard(topRatedMovies)
+
+      //   // 사용자가 검색어를 입력했을 경우, 실행되는 구문입니다.
+      //   const form = document.querySelector("#search-form");
+      //   form.addEventListener("click", async function () {
+      //     const searchWord = document.querySelector("#search-input").value;
+      //     const topRatedMovies = await getTopRatedMovies(searchWord)
+      //     renderMovieCard(topRatedMovies)
+      //   })
+      // })
+  </script>
+
 </body>
 
 </html>
