--- a/assets/pages_ceo/ceoPost.html
+++ b/assets/pages_ceo/ceoPost.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>음식 추가, 수정, 삭제</title>
     <link rel="stylesheet" href="../css/reset.css">
@@ -16,7 +17,7 @@
             </div>
             <div>
                 <label for="mail">메뉴사진:</label>
-                <input type="image" id="menuImage" />
+                <input type="file" id="menuImage" />
             </div>
             <div>
                 <label for="price">가격:</label>
@@ -24,14 +25,29 @@
             </div>
     
             <div class="submitBtn">
-                <button type="submit" onclick="">음식등록</button>
+                <button type="submit" onclick="menuPost()">음식등록</button>
             </div>
         </form>    
     </div>
-
-
     <!-- script part -->
-    <script src="./js/ceoOrder.js"></script>
-    <script></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script type="module" src="./js/ceoOrder.js"></script>
+    <script>
+        function menuPost() {
+            try {
+                const data = {
+                    menuName: $('#menuName').val(),
+                    menuImage: $('#menuImage').val(),
+                    price: $('#price').val(),
+                }
+                console.log(data)
+                axios.post('http://localhost:3000/api/ceo/addMenu', data)
+                    .then(data => console.log(data.data))
+            } catch (error) {
+                console.log(error)
+            }
+        }
+    </script>
 </body>
 </html>
