--- a/assets/pages_ceo/ceo.html
+++ b/assets/pages_ceo/ceo.html
@@ -20,7 +20,7 @@
                     <ul class="gnb">
                         <li><a href="./ceoLogin.html">로그인</a></li>
                         <li><a href="./ceoSignup.html">회원가입</a></li>
-                        <li><a href="#">회원정보</a></li>
+                        <li><a href="./ceoGet.html">회원정보</a></li>
                     </ul>
                 </nav>
                 <div class="searchWrap">
@@ -58,6 +58,7 @@
                                 <th>메뉴이름</th>
                                 <th>메뉴사진</th>
                                 <th>가격</th>
+                                <th>메뉴삭제</th>
                               </tr>
                             </thead>
                             <tbody>
@@ -65,26 +66,9 @@
                                 <td>Lorem</td>
                                 <td>Ipsum</td>
                                 <td>Dolor</td>
-                              </tr>
-                              <tr>
-                                <td>Lorem</td>
-                                <td>Ipsum</td>
-                                <td>Dolor</td>
-                              </tr>
-                              <tr>
-                                <td>Lorem</td>
-                                <td>Ipsum</td>
-                                <td>Dolor</td>
-                              </tr>
-                              <tr>
-                                <td>Lorem</td>
-                                <td>Ipsum</td>
-                                <td>Dolor</td>
-                              </tr>
-                              <tr>
-                                <td>Lorem</td>
-                                <td>Ipsum</td>
-                                <td>Dolor</td>
+                                <td>
+                                    <button class="btn deleteBtn" onclick="menuDelete();">메뉴삭제</button>
+                                </td>
                               </tr>
                             </tbody>
                           </table>
