--- a/assets/pages_ceo/ceoLogin.html
+++ b/assets/pages_ceo/ceoLogin.html
@@ -41,14 +41,10 @@
                 console.log(data)
                 axios.post('http://localhost:3000/api/ceo/login', data)
                     .then(response => {
-                        // 로그인 성공 시
-                        if (response.data.success) {
-                            alert('사장님 어서오세요');
-                        } else {
-                            // 로그인 실패 시
-                            alert('회원이 아닙니다. 회원가입을 해주세요.');
-                        }
-                    }) 
+                        alert('사장님 어서오세요');
+                    }).catch(response => {
+                        alert('회원가입 실패하였습니다');
+                    })
                 } catch (error) {
                     console.log(error)
                 };
