--- a/assets/pages_ceo/ceoPost.html
+++ b/assets/pages_ceo/ceoPost.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="wrap">
-        <form action="http://localhost:3000/api/ceo/getMenuAll" method="post">
+        <form>
             <div>
                 <label for="menuName">메뉴이름:</label>
                 <input type="text" id="menuName" />
