--- a/assets/pages_ceo/ceoGet.html
+++ b/assets/pages_ceo/ceoGet.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>사장님 회원정보</title>
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/ceo.css">
 
     <!-- axios -->
     <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <div id="wrap">
-        <div id="loginInfo"></div>
+        <p class="get">Your's Account Infomation ▼</p>
+        <div class="getBox" id="loginInfo"></div>
+
+        <button class="homeBtn" onclick="location.href = './ceo.html';">🏚 홈으로</button>
     </div>
 
     <!-- script part -->
