--- a/assets/pages_ceo/ceoPost.html
+++ b/assets/pages_ceo/ceoPost.html
@@ -28,8 +28,8 @@
             </div>
     
             <div class="submitBtn">
-                <button type="submit" onclick="menuPost();">음식등록</button>
-                <button type="submit" onclick="menuChange();">음식수정</button>
+                <button type="submit" class="btn" onclick="menuPost();">음식등록</button>
+                <button type="submit" class="btn" onclick="menuChange();">음식수정</button>
             </div>
         </form>    
     </div>
