--- a/assets/pages_ceo/ceo.html
+++ b/assets/pages_ceo/ceo.html
@@ -21,13 +21,14 @@
                 <h1><a href="../index.html">Qwerty's Delivery - CEO</a></h1>
                 <nav class="nav">
                     <ul class="gnb">
-                        <li><a href="./ceoLogin.html">로그인</a></li>
+                        <li><a href="./ceoLogin/html">로그인</a></li>
                         <li><a href="./ceoSignup.html">회원가입</a></li>
                         <li><a href="./ceoGet.html">회원정보</a></li>
+                        <li><a onclick="logout();">로그아웃</a></li>
                     </ul>
                 </nav>
                 <div class="searchWrap">
-                    <input type="text" placeholder="음식점을 입력해주세요"/>
+                    <input type="text" placeholder="메뉴를 입력해주세요"/>
                     <button class="search">검색</button>
                 </div>
             </div>
@@ -58,19 +59,25 @@
                         <table class="menu" id="menuTable">
                             <thead>
                               <tr>
+                                <th>스토어 Id</th>
                                 <th>메뉴이름</th>
                                 <th>메뉴사진</th>
                                 <th>가격</th>
+                                <th>메뉴수정</th>
                                 <th>메뉴삭제</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr>
+                                <td id="storeId"></td>
                                 <td id="menuName"></td>
                                 <td id="menuImage"></td>
                                 <td id="price"></td>
                                 <td>
-                                    <button class="btn deleteBtn" onclick="menuDelete();">메뉴삭제</button>
+                                    <button class="changeBtn" onclick="menuChange();">메뉴수정</button>
+                                </td>
+                                <td>
+                                    <button class="deleteBtn" onclick="menuDelete();">메뉴삭제</button>
                                 </td>
                               </tr>
                             </tbody>
@@ -104,39 +111,100 @@
     <!-- script part -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script>
-        // table db 데이터 값 출력
-        try {
-                const data = {
-                    menuName: $('#menuName').val(),
-                    menuImage: $('#menuImage').val(),
-                    price: $('#price').val(),
-                }
-                console.log(data)
-                axios.get('http://localhost:3000/api/ceo/getMenuAll', data)
-                .then(response =>{
-                    document.getElementById("menuName").innerHTML = data ; 
-                    document.getElementById("menuImage").innerHTML = data ; 
-                    document.getElementById("price").innerHTML = data ;
-                })
-        } catch (error) {
-            console.log(error)
+        // 테이블 행을 동적으로 생성하는 함수
+        function generateTableRows(dataArray) {
+            const tableBody = document.querySelector("#menuTable tbody");
+            tableBody.innerHTML = ""; // 기존의 행들을 삭제합니다.
+
+            for (let i = 0; i < dataArray.length; i++) {
+                const item = dataArray[i];
+
+                const row = document.createElement("tr");
+
+                const storeIdCell = document.createElement("td");
+                storeIdCell.textContent = item.storeId;
+                row.appendChild(storeIdCell);
+
+                const menuNameCell = document.createElement("td");
+                menuNameCell.textContent = item.menuName;
+                row.appendChild(menuNameCell);
+
+                const menuImageCell = document.createElement("td");
+                menuImageCell.textContent = item.menuImage;
+                row.appendChild(menuImageCell);
+
+                const priceCell = document.createElement("td");
+                priceCell.textContent = item.price;
+                row.appendChild(priceCell);
+
+                const menuChangeCell = document.createElement("td");
+                const changeBtn = document.createElement("button");
+                changeBtn.textContent = "메뉴수정";
+                changeBtn.onclick = () => menuChange(item.menuId); // 수정 함수에 메뉴 아이디를 넘깁니다.
+                menuChangeCell.appendChild(changeBtn);
+                row.appendChild(menuChangeCell);
+
+                const menuDeleteCell = document.createElement("td");
+                const deleteBtn = document.createElement("button");
+                deleteBtn.textContent = "메뉴삭제";
+                deleteBtn.onclick = () => menuDelete(item.menuId); // 삭제 함수에 메뉴 아이디를 넘깁니다.
+                menuDeleteCell.appendChild(deleteBtn);
+                row.appendChild(menuDeleteCell);
+
+                tableBody.appendChild(row);
+            }
         }
 
-        // deleteBtn
-        function menuDelete() {
-            try {
-                const data = {
-                    menuName: $('#menuName').val(),
-                    menuImage: $('#menuImage').val(),
-                    price: $('#price').val(),
-                }
-                console.log(data)
-                axios.get('http://localhost:3000/api/ceo/deleteMenu/:menuId', data)
-                .then(response =>{
-                    document.getElementById("menuName").innerHTML = data ; 
-                    document.getElementById("menuImage").innerHTML = data ; 
-                    document.getElementById("price").innerHTML = data ;
+        // table db 데이터 값 출력
+        const data = {
+            email: $('#email'),
+            password: $('#password'),
+            confirm: $('#passwordConfirm'),
+            storeName: $('#storeName'),
+            storeImage: $('#storeImage'),
+        }
+
+        axios.get('http://localhost:3000/api/ceo/getMenuAll', data)
+            .then(response => {
+                console.log(response);
+
+                const dataArray = response.data.data;
+                generateTableRows(dataArray); // 테이블 행 생성 함수를 호출하여 데이터로 테이블을 업데이트합니다.
+
+            })
+            .catch(function (error) {
+                console.log(error);
+            })
+
+        // 메뉴 수정
+        function menuChange(menuId) {
+            const data = {
+                menuName: $('#menuName').val(),
+                menuImage: $('#menuImage').val(),
+                price: $('#price').val(),
+            }
+            console.log(data)
+            axios.post(`http://localhost:3000/api/ceo/updateMenu/${menuId}`, data)
+                .then(request => {
+                    alert('음식수정완료!');
                 })
+                .catch(function (error) {
+                    console.log(error);
+                })
+        }
+
+        // 메뉴 삭제
+        function menuDelete(menuId) {
+            // 삭제를 처리하는 로직을 추가하세요.
+        }
+
+        // logout
+        function logout() {
+            try {
+                axios.post('http://localhost:3000/api/ceo/logout')
+                    .then(response => {
+                        alert('사장님!!!!! 살펴가십쇼!!');
+                    })
             } catch (error) {
                 console.log(error);
             }
